2015-09-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.82.4 released.

2015-09-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.82.3 released.

2015-09-04  c.hetherington  <cth@carlh.net>

	* Fix subtitle burn-in.

2015-09-01  Carl Hetherington  <cth@carlh.net>

	* Version 1.82.2 released.

2015-08-31  Carl Hetherington  <cth@carlh.net>

	* Updated es_ES translation from Manuel AC.

2015-08-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.82.1 released.

2015-08-30  Carl Hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-08-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.82.0 released.

2015-08-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.81.8 released.

2015-08-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.81.7 released.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Version 1.81.6 released.

2015-08-17  Carl Hetherington  <cth@carlh.net>

	* Fix crop of some YUV content.

2015-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.81.5 released.

2015-08-09  Carl Hetherington  <cth@carlh.net>

	* Fix various incorrect behaviours with 96kHz
	audio sources.

2015-08-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.81.4 released.

2015-08-04  Carl Hetherington  <cth@carlh.net>

	* Updated da_DK translation from Anders Uhl Pedersen.

	* Version 1.81.3 released.

2015-08-04  Carl Hetherington  <cth@carlh.net>

	* Fix incorrectly displayed job details when translated
	on Windows.

2015-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.81.2 released.

2015-07-29  Carl Hetherington  <cth@carlh.net>

	* Part of da_DK translation from Anders Uhl Pedersen.

2015-07-28  Carl Hetherington  <cth@carlh.net>

	* Notice when content is modified and offer to save the project
	on closing DCP-o-matic.

	* Version 1.81.1 released.

2015-07-28  c.hetherington  <cth@carlh.net>

	* Recognise .w64 and .flac as audio files.

2015-07-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.81.0 released.
